[package]
name = "squigglers"
description = "A Squigglepy re-implementation on rust"
version = "0.0.1"
repository = "https://github.com/Maratripa/squigglers"
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr = "0.4.3"
rand = "0.8.5"
statrs = "0.16"
ndarray = "0.15"
dist-derive = { version = "0.1.0", path = "dist-derive" }
